' -*- mode: plantuml; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
'
' Copyright (C) 2026 Marco Craveiro <marco.craveiro@gmail.com>
'
' This program is free software; you can redistribute it and/or modify it under
' the terms of the GNU General Public License as published by the Free Software
' Foundation; either version 3 of the License, or (at your option) any later
' version.
'
' This program is distributed in the hope that it will be useful, but WITHOUT
' ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
' FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License along with
' this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
' Street, Fifth Floor, Boston, MA 02110-1301, USA.
'
@startuml

title ores.diff Component

set namespaceSeparator ::

namespace ores #F2F2F2 {
    namespace diff #F2F2F2 {
        namespace domain #FEFECE {
            class field_value <<struct>> {
                +name : std::string
                +value : std::string
            }
            class diff_entry <<struct>> {
                +field_name : std::string
                +old_value : std::string
                +new_value : std::string
            }
            class diff_result <<struct>> {
                +entries : std::vector<diff_entry>
            }
            diff_result o-- diff_entry
        }
        namespace engine #FEFECE {
            class compare <<function>> {
                +compute(previous: vector<field_value>, current: vector<field_value>) : diff_result
            }
            compare ..> ores::diff::domain::field_value : consumes
            compare ..> ores::diff::domain::diff_result : produces
        }
    }
}

@enduml
